base/team-kassa/integration.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: kassa-integration
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 100
      - pause: {duration: 3m}
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: kassa-integration
  template:
    metadata:
      labels:
        app: kassa-integration
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: kassa-worker
        image: ghcr.io/integrationproject-groep1/kassa:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        livenessProbe:
          exec:
            command: ["ls", "/app"]
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          exec:
            command: ["ls", "/app"]
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
        volumeMounts:
        - name: outbox-data
          mountPath: /app/outbox
      volumes:
      - name: outbox-data
        persistentVolumeClaim:
          claimName: kassa-outbox-pvc
