base/team-kassa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kassa-ingress
  namespace: shift-festival
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /web/database/manager {
        deny all;
        return 403;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: kassa.desiderius.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kassa-web-service
            port:
              number: 8069
